fix scrollbar

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -11,20 +11,23 @@ body {
 }
 
 *::-webkit-scrollbar {
-      width: 15px;
-} 
+    width: 15px;
+}
+
 *::-webkit-scrollbar-track {
-      background-color: #3C3F41;
-} 
- 
+    background-color: rgb(60, 60, 60);
+}
+
 *::-webkit-scrollbar-thumb {
-      background-color: rgba(0, 0, 0, 0.2); 
-} 
+    background-color: rgba(0, 0, 0, .1);
+}
+
 *::-webkit-scrollbar-button {
-      background-color: #7c2929;
-} 
+    background-color: rgba(0, 0, 0, .3);
+}
+
 *::-webkit-scrollbar-corner {
-      background-color: #3C3F41;
+    background-color: rgb(60, 60, 60);
 }
 
 a {
@@ -193,7 +196,7 @@ section {
     width: 100%;
     height: 100%;
     overflow: scroll;
-    visibility: hidden;
+    display: none;
 }
 
 .tab > .wrapper {
@@ -202,7 +205,7 @@ section {
 }
 
 .tab.active {
-    visibility: visible;
+    display: block;
 }
 
 #tab_desc > .wrapper a {
